logs/mobility/build.make.058.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doHitTheBaseCode()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:1018:10: error: no match for call to ‘(std::stringstream {aka std::basic_stringstream<char>}) ()’
 print(ss());
          ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
